[fix]大文字の変更

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Shantell+Sans:wght@500;700&family=Mochiy+Pop+One&display=swap" rel="stylesheet">
+    <link href="https://gakuen.idolmaster-official.jp/idol/hiro/2?family=Shantell+Sans:wght@500;700&family=Mochiy+Pop+One&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -25,7 +25,7 @@
     <main>
         <section class="hero">
             <div class="container">
-                <h1>篠澤 広の世界へようこそ！</h1>
+                <h1>篠澤 広</h1>
                 <p>篠澤 広と愉快な仲間たちと、辛く、苦しい、トップアイドルになるまでの物語</p>
             </div>
         </section>
